
ChangeLog
 [ + added, - removed, * changed ]
 * 30Jul2013 Added overwrite option in <merge> section
             Removed unused 'remove-files' in favor of 'keep-mpits'
             Fix fortran declarations on API
 * 29Jul2013 Fixed generation of codelocation & user function in nanos stacked
 + 19Jul2013 Add CPU information at begin & end of
               - routine executing pthread_create
               - OpenMP worksharing, function, ... *
             Add multiple overhead tests
 + 17Jul2013 Added overhead tests
 * 15Jul2013 Fixed OpenCL timing issues, added MPI+OpenCL example
 * 09Jul2013 Fix sampling handler callstack level
 * 08Jul2013 Allow OpenMP user code to generate samples again
             Moved Extrae_set_initial_taskid at the very beginning
 * 04Jul2013 Fix compilation of papi_best_set for PAPI when using CUDA
             Move Extrae_CUDA_fini to cuda_common.c
 * 02Jul2013 Fixed compilation flags for the merger to enable the online support.
             Fixed which events are cached to keep the communicators definitions in the online analysis. 
             The first spectral analysis now applies windowing to the first 10% of the data.
             Fixed missing dependencies in the online libraries.
             Fixed report message for the circular buffer when parsing the XML configuration.
 * 25Jun2013 Fixed bug in the cpu IDs of unmatched communications through different tasks of the parallel merge.
             Removed extra debug messages.
             Added instrumentation support for MPI_comm_spawn and MPI_comm_spawn_multiple
 + 17Jun2013 Add instrumentation for routines that call fork/wait/...
             Fix bug that malformed communication records in mpi2prv serial
 + 12Jun2013 Add check for CUDA
 + 07Jun2013 Add CUDA fini to flush all streams just in case some did
               not get flushed
 + 06Jun2013 Added check for Extrae fortran API / define_event_type
             Additional bits for instrumenting OpenCL